--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "s": "node server/server.js",
+    "dev-s": "nodemon server/server.js"
   },
   "dependencies": {
     "express": "^4.16.3",
