--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "dev-s": "nodemon server/server.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.1",
+    "validator": "^10.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
