show all questions

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev-s": "nodemon server/server.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
