--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "ethereumjs-util": "^5.2.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.1",
     "validator": "^10.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
